- Fix height and scrollbar in contactList

--- a/Milestone_5 BONUS/assets/css/style.css
+++ b/Milestone_5 BONUS/assets/css/style.css
@@ -82,6 +82,11 @@ input:focus-visible {
 /* /User section */
 
 /* Notifications */
+.contacts{
+    height: calc(100% - 194px);
+    overflow-y: scroll;
+}
+
 .notes{
     height: 75px;
     display: flex;
